# trobz-python-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  copier.yaml  pyproject.toml
.github/workflows/: pre-commit.yaml  release.yaml
docs/: INDEX.md  code-standards.md  codebase-summary.md  deployment-guide.md
template/: .gitignore  AGENTS.md.jinja  Makefile  Makefile.jinja  README.md.jinja  pyproject.toml.jinja  ruff.toml  ty.toml  {% if enable_gitlab_action %}.gitlab-ci{% endif%}.yml  {% if project_type == 'service' %}.env.sample{% endif %}
template/{% if enable_github_action %}.github{% endif%}/actions/setup-python-env/: action.yaml
template/{% if enable_github_action %}.github{% endif%}/workflows/: pre-commit.yaml  release.yaml.jinja  test.yaml  {% if publish_to_pypi %}publish.yaml{% endif %}.jinja  {% if publish_to_pypi %}release.yaml{% endif %}.jinja
template/{{package_name}}/: main.py.jinja  {% if project_type == 'service' %}settings.py{% endif %}.jinja
